	* Fix ldns_wire2dname from reading 1 byte beyond end for pointer.
	* Fix crash using GOST for particular platform configurations.
	* extern C declarations used in the header file.
	* Removed debug fprintf from resolver.c.
	* ldns-signzone checks if public key file is for the right zone.
	* NETLDNS, .NET port of ldns functionality, by Alex Nicoll, in contrib.

1.6.5
	* Catch \X where X is a digit as an error.
	* Fix segfault when ip6 ldns resolver only has ip4 servers.
	* Fix NSEC record after DNSKEY at zone apex not properly signed.
	* Fix syntax error if last label too long and no dot at end of domain. 
	* Fix parse of \# syntax with space for type LOC.
	* Fix ldns_dname_absolute for escape sequences, fixes some parse errs.
	* bugfix #297: linking ssl, bug due to patch submitted as #296.
	* bugfix #299: added missing declarations to host2str.h
	* ldns-compare-zones -s to not exclude SOA record from comparison.
	* --disable-rpath fix
	* fix ldns_pkt_empty(), reported by Alex Nicoll.
	* fix ldns_resolver_new_frm_fp not ignore lines after a comment.
	* python code for ldns_rr.new_question_frm_str()
	* Fix ldns_dnssec_verify_denial: the signature selection routine.
	* Type TALINK parsed (draft-ietf-dnsop-trust-history).
	* bugfix #304: fixed dead loop in ldns_tcp_read_wire() and
	  ldns_tcp_read_wire_timeout().
	* GOST support with correct algorithm numbers.  The plan is to make it
	  enabled if openssl support is detected, but it is disabled by
	  default in this release because the RFC is not ready.
	* Fixed comment in rbtree.h about being first member and data ptr.
	* Fixed possibly leak in case of out of memory in ldns_native2rdf...
	* ldns_dname_is_wildcard added.
	* Fixed: signatures over wildcards had the wrong labelcount.
	* Fixed ldns_verify() inconsistent return values.
	* Fixed ldns_resolver to copy and free tsig name, data and algorithm.
	* Fixed ldns_resolver to push search onto searchlist.